# dicom_interface

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
